--- a/firebase.json
+++ b/firebase.json
@@ -21,8 +21,8 @@
   },
   "functions": [
     {
-      "source": "functions",
-      "codebase": "default",
+      "source": "naverlogin",
+      "codebase": "naverlogin",
       "ignore": [
         "node_modules",
         ".git",
