--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,12 +13,56 @@ dependencies:
   firebase_core: ^3.13.0   # firebase 이용을 위함
   flutter:
     sdk: flutter
-  naver_login_sdk: ^3.0.1  # naver login sdk로 쉽게 로직을 짬. 
+  naver_login_sdk: ^3.0.1  # naver login sdk로 쉽게 로직을 짬._찬홍 
+  flutter_native_splash: ^2.4.6 # 앱 로팅화면  구현할 때 사용. _ 가령 
+
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  
 
 flutter:
   uses-material-design: true
+
+
+  assets:
+    - assets/images/Logo.png
+    - assets/images/talk1.png
+    - assets/images/talk2.png
+    - assets/images/talk3.png
+    - assets/images/1_1.png
+    - assets/images/1_2.png
+    - assets/images/1_3.png
+    - assets/images/1_4.png
+    - assets/images/2_1.png
+    - assets/images/2_2.png
+    - assets/images/2_3.png
+    - assets/images/2_4.png
+    - assets/images/ch1_1.png
+    - assets/images/ch1_2.png
+    - assets/images/ch1_3.png
+    - assets/images/ch1_4.png
+    - assets/images/ch2_1.png
+    - assets/images/ch2_2.png
+    - assets/images/ch2_3.png
+    - assets/images/ch2_4.png
+    - assets/images/TestLoading.png
+    - assets/images/Star.png
+    - assets/images/Polygon.png
+    - assets/images/Ellipse.png
+  
+
+
+  fonts:
+    - family: League Spartan
+      fonts:
+
+        - asset: assets/fonts/LeagueSpartan-VariableFont_wght.ttf
+          weight: 700
+    - family: Golos Text
+      fonts:
+        - asset: assets/fonts/GolosText-VariableFont_wght.ttf
+          weight: 500
