--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: ^3.7.2
 
 dependencies:
+  table_calendar: ^3.0.9
+  intl: ^0.18.0
   cloud_firestore: ^5.6.7  # db
   cloud_functions: ^5.5.0  # firebase functions 이용을 위함
   firebase_auth: ^5.5.3    # 인증을 위함
@@ -16,8 +18,6 @@ dependencies:
   naver_login_sdk: ^3.0.1  # naver login sdk로 쉽게 로직을 짬._찬홍 
   flutter_native_splash: ^2.4.6 # 앱 로팅화면  구현할 때 사용. _ 가령 
   auto_size_text: ^3.0.0 #설문 조사 할떄 질문이 도형을 넘지 못하게 자동으로 맞춰줄 때 사용. _가령
-
-
 
 dev_dependencies:
   flutter_test:
