홈 일정표 수정( 일정 수정 기능 추가, 점 3개 생기는 거)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ flutter:
     - assets/images/mainpage/notifications.png
     - assets/images/mainpage/delete.png
 
+    - assets/images/friendScreen/star_on.png
+    - assets/images/friendScreen/star_off.png
     - assets/images/PsychologyTest/Character/ch1_1.png
     - assets/images/PsychologyTest/Character/ch1_2.png
     - assets/images/PsychologyTest/Character/ch1_3.png
