--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   naver_login_sdk: ^3.0.1  # naver login sdk로 쉽게 로직을 짬._찬홍 
   flutter_native_splash: ^2.4.6 # 앱 로팅화면  구현할 때 사용. _ 가령 
   auto_size_text: ^3.0.0 #설문 조사 할떄 질문이 도형을 넘지 못하게 자동으로 맞춰줄 때 사용. _가령
+  image_picker: ^1.0.4 #프로필 사진 변경할 떄 갤러리로 넘어갈 때 사용. _민서
+
 
 dev_dependencies:
   flutter_test:
@@ -81,6 +83,16 @@ flutter:
     - assets/images/PsychologyTest/TestLoading.png
 
     - assets/images/Setting/
+    - assets/images/Setting/chac1.png
+    - assets/images/Setting/chac2.png
+    - assets/images/Setting/chac3.png
+    - assets/images/Setting/chac4.png
+    - assets/images/Setting/chac5.png
+    - assets/images/Setting/chac6.png
+    - assets/images/Setting/chac7.png
+    - assets/images/Setting/chac8.png
+    - assets/images/Setting/Exclude.png
+    - assets/images/Setting/Subtract.png
 
 
   fonts:
