--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   flutter_native_splash: ^2.4.6 # 앱 로팅화면  구현할 때 사용. _ 가령 
   auto_size_text: ^3.0.0 #설문 조사 할떄 질문이 도형을 넘지 못하게 자동으로 맞춰줄 때 사용. _가령
   image_picker: ^1.0.4 #프로필 사진 변경할 떄 갤러리로 넘어갈 때 사용. _민서
+  shared_preferences: ^2.0.15 #심리테스트 결과 불러올 때 사용. _민서
+  permission_handler: ^12.0.1 #갤러리 권한 요청할 떄 사용. _민서
+
 
 
 dev_dependencies:
@@ -93,6 +96,9 @@ flutter:
     - assets/images/Setting/chac8.png
     - assets/images/Setting/Exclude.png
     - assets/images/Setting/Subtract.png
+    - assets/images/Setting/gallery.png
+    - assets/images/Setting/Union.png
+
 
 
   fonts:
