--- a/firebase.json
+++ b/firebase.json
@@ -21,7 +21,7 @@
   },
   "functions": [
     {
-      "source": "lib/src/naverlogin",
+      "source": "lib/auth/naverlogin/",
       "codebase": "naverlogin",
       "ignore": [
         "node_modules",
@@ -29,10 +29,6 @@
         "firebase-debug.log",
         "firebase-debug.*.log",
         "*.local"
-      ],
-      "predeploy": [
-        "npm --prefix \"$RESOURCE_DIR\" run lint",
-        "npm --prefix \"$RESOURCE_DIR\" run build"
       ]
     }
   ]
