--- a/lib/auth/naverlogin/package.json
+++ b/lib/auth/naverlogin/package.json
@@ -15,11 +15,12 @@
     "@google-cloud/storage": "^7.16.0",
     "axios": "^1.9.0",
     "firebase-admin": "^13.4.0",
-    "firebase-functions": "^6.3.2"
+    "firebase-functions": "^6.4.0"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
     "typescript": "^5.8.3"
   },
+  "type": "module",
   "private": true
 }
