--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 
 dependencies:
   table_calendar: ^3.0.9
-  intl: ^0.20.0
+  intl: ^0.20.2
   cloud_firestore: ^5.6.12  # db
   cloud_functions: ^5.5.0  # firebase functions 이용을 위함
   firebase_auth: ^5.7.0    # 인증을 위함
@@ -84,7 +84,7 @@ flutter:
     - assets/images/PsychologyTest/Shape/Star.png
     
 
-    - assets/images/Setting/
+    - assets/images/Setting/chevron.png
     - assets/images/Setting/Exclude.png
     - assets/images/Setting/Subtract.png
     - assets/images/Setting/gallery.png
@@ -97,6 +97,7 @@ flutter:
     - assets/images/Setting/chac6.png
     - assets/images/Setting/chac7.png
     - assets/images/Setting/chac8.png
+    - assets/images/Setting/chevron2.png
 
   fonts:
     - family: League Spartan
